--- a/watchlist.ui
+++ b/watchlist.ui
@@ -41,23 +41,33 @@
              </property>
             </widget>
            </item>
-           <item row="1" column="2" colspan="3">
+           <item row="1" column="2">
             <widget class="QComboBox" name="watchlistName"/>
            </item>
            <item row="2" column="2">
             <widget class="QComboBox" name="showCharts"/>
            </item>
-           <item row="2" column="3">
-            <widget class="QCheckBox" name="pauseRefresh">
-             <property name="text">
-              <string>Pause Refresh</string>
-             </property>
-            </widget>
-           </item>
            <item row="1" column="0">
             <widget class="QLabel" name="label_4">
              <property name="text">
               <string>Watchlist</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="0">
+            <widget class="QLabel" name="label_7">
+             <property name="text">
+              <string>Filter</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="2">
+            <widget class="QLineEdit" name="filterEdit"/>
+           </item>
+           <item row="1" column="3">
+            <widget class="QCheckBox" name="pauseRefresh">
+             <property name="text">
+              <string>Pause Refresh</string>
              </property>
             </widget>
            </item>
